fix text when overlapping

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,21 @@
   align-items: center;
   border-bottom: 3px solid black;
 }
-.home-title {
+.home-title-back {
+  font-size: 7vw;
+  text-align-last:end ;
+  padding: 0 15% 0 15%;
+  position: absolute;
+  top: 25%;
+  z-index: 0;
+  margin-top: 0;
+  /* mix-blend-mode:difference;
+  color: rgb(255, 255, 255); */
+  /* mix-blend-mode:difference;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0); */
+}
+.home-title-front {
   font-size: 7vw;
   text-align-last:end ;
   padding: 0 15% 0 15%;
@@ -20,17 +34,17 @@
   top: 25%;
   z-index: 99;
   margin-top: 0;
-  /* mix-blend-mode:difference;
-  color: rgb(255, 255, 255); */
-  mix-blend-mode:difference;
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
+  color: rgba(255, 255, 255, 0);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 .container-rectangle{
   width: 100%;
   display: flex;
   justify-content: center;
   margin-top: 150px;
+  position: relative;
+  top: -5%;
 }
 .rectangles{
   width: 100%;
@@ -44,8 +58,8 @@
 }
 .stack1{
   background-color: rgb(78, 226, 167);
-  margin-top: -10px;
-  margin-right: 50px;
+  margin-top: -5px;
+  margin-right: 20px;
   /* background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%); */
   /* background-color: #000000; */
   border: 2px solid black;
@@ -57,7 +71,7 @@
   background-color: rgb(255, 23, 23);
   position: absolute;
   z-index: 1;
-  top: 17%;
+  top: -5%;
   /* background-image: #000; */
   /* background-color: #000000; */
   border: 2px solid black;
@@ -123,6 +137,7 @@
   position: relative;
   margin-bottom: 50PX;
   width: 460px;
+  height: 200px;
   /* min-width: 450px; */
   /* color: white; */
 }
@@ -130,18 +145,31 @@
   width: 200px;
   height: 200px;
   object-fit: cover;
+  position: absolute;
+  z-index:10 ;
   /* color: black; */
   
 }
-.profile-role{
+.profile-role-back{
   position: absolute;
   top: 0;
   left: 100px;
-  mix-blend-mode: difference;
-  color: #ffffff;
+  z-index: 0;
+  color: #000000;
+  /* mix-blend-mode: difference;
+  color: #ffffff; */
   /* mix-blend-mode:color-dodge;
   color: rgb(0, 0, 0);
   background-color: #ffffff; */
+}
+.profile-role-front{
+  position: absolute;
+  top: 0;
+  left: 100px;
+  z-index: 20;
+  color: rgba(255, 255, 255, 0);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 .desc-role{
   width: 150px;
@@ -152,22 +180,36 @@
 }
 
 /* CLIENTS */
+.clients-sec{
+  /* position: relative; */
+  width: 100%;
+  display: flex;
+  place-content: center;
+}
 .clients{
   background-color: #84fab0;
   text-align: center;
-  position: relative;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
   min-height: 130px;
   height: auto;
   padding-top: 50px;
 }
-.clients h3{
+.client-title-back{
   position: absolute;
-  top: -17%;
-  left: 0;
-  right: 0;
-  background: -webkit-linear-gradient(#000000, #7fffae);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  z-index: 0;
+  margin-top: -23px;
+  color: rgb(0, 0, 0);
+}
+.client-title-front{
+  position: absolute;
+  z-index: 20;
+  margin-top: -23px;
+  color: rgba(255, 255, 255, 0);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
+  
 }
 .client-logos{
   display: flex;
@@ -315,6 +357,9 @@
   .clients{
     padding-top: 30px;
   }
+  .stack2{
+    top: -5%;
+  }
 }
 
 @media (max-width: 600px) {
@@ -334,7 +379,7 @@
     min-width: none;
     width: 200px;
   }
-  .profile-role{
+  .profile-role-back{
     position: static;
   }
   .desc-role{
